--- a/SportUp/AddressSelectViewController.storyboard
+++ b/SportUp/AddressSelectViewController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="JxU-6I-AMn">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Address Select View Controller-->
+        <!--Выбор адреса-->
         <scene sceneID="iJ0-50-17c">
             <objects>
-                <viewController extendedLayoutIncludesOpaqueBars="YES" id="JxU-6I-AMn" customClass="AddressSelectViewController" customModule="SportUp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Выбор адреса" extendedLayoutIncludesOpaqueBars="YES" id="JxU-6I-AMn" customClass="AddressSelectViewController" customModule="SportUp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="nou-A5-akx"/>
                         <viewControllerLayoutGuide type="bottom" id="WNm-hu-BJU"/>
