--- a/SportUp/EventManageViewController.storyboard
+++ b/SportUp/EventManageViewController.storyboard
@@ -14,12 +14,12 @@
         <scene sceneID="gan-UX-F4a">
             <objects>
                 <tableViewController id="TD6-Fc-ZN5" customClass="EventManageViewController" customModule="SportUp" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Q46-Vl-dLs">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="1" sectionFooterHeight="1" id="Q46-Vl-dLs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.96830016370000005" green="0.97648984189999999" blue="0.98052781820000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <view key="tableFooterView" contentMode="scaleToFill" id="HRr-S6-sQx">
-                            <rect key="frame" x="0.0" y="1561" width="375" height="81"/>
+                            <rect key="frame" x="0.0" y="1641" width="375" height="81"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RNY-c7-0oL" customClass="GoButton" customModule="SportUp" customModuleProvider="target">
@@ -55,10 +55,10 @@
                             </constraints>
                         </view>
                         <sections>
-                            <tableViewSection headerTitle=" " id="vC2-RM-MUv">
+                            <tableViewSection id="vC2-RM-MUv">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="EOl-QI-iU0">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="60"/>
+                                        <rect key="frame" x="0.0" y="35" width="375" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="EOl-QI-iU0" id="HPi-sd-35p">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="59"/>
@@ -81,7 +81,7 @@
                                         <inset key="separatorInset" minX="16" minY="0.0" maxX="16" maxY="0.0"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="71" id="hDt-ej-To6">
-                                        <rect key="frame" x="0.0" y="88" width="375" height="71"/>
+                                        <rect key="frame" x="0.0" y="95" width="375" height="71"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hDt-ej-To6" id="wLN-TE-H9c">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
@@ -112,7 +112,7 @@
                             <tableViewSection headerTitle=" " id="5dU-0f-yor">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="71" id="YLd-vV-wqW">
-                                        <rect key="frame" x="0.0" y="187" width="375" height="71"/>
+                                        <rect key="frame" x="0.0" y="206" width="375" height="71"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="YLd-vV-wqW" id="Ef9-V3-XVl">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
@@ -149,7 +149,7 @@
                                         <inset key="separatorInset" minX="55" minY="0.0" maxX="0.0" maxY="0.0"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="220" id="557-6m-sq5">
-                                        <rect key="frame" x="0.0" y="258" width="375" height="220"/>
+                                        <rect key="frame" x="0.0" y="277" width="375" height="220"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="557-6m-sq5" id="Db3-YK-mGi">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="219"/>
@@ -180,7 +180,7 @@
                                         <edgeInsets key="layoutMargins" top="0.0" left="16" bottom="0.0" right="16"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="71" id="CEm-z3-EWo">
-                                        <rect key="frame" x="0.0" y="478" width="375" height="71"/>
+                                        <rect key="frame" x="0.0" y="497" width="375" height="71"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="CEm-z3-EWo" id="Neh-z0-J2T">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
@@ -212,7 +212,7 @@
                                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="220" id="NFT-Wj-QFq">
-                                        <rect key="frame" x="0.0" y="549" width="375" height="220"/>
+                                        <rect key="frame" x="0.0" y="568" width="375" height="220"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="NFT-Wj-QFq" id="szW-Jf-oEz">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="219"/>
@@ -247,7 +247,7 @@
                             <tableViewSection headerTitle=" " id="crZ-U7-dFf">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="71" id="hyZ-63-D7u">
-                                        <rect key="frame" x="0.0" y="797" width="375" height="71"/>
+                                        <rect key="frame" x="0.0" y="828" width="375" height="71"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="hyZ-63-D7u" id="sCi-8I-b0i">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
@@ -293,7 +293,7 @@
                             <tableViewSection headerTitle=" " id="tXg-Ih-ROk">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="71" id="N4b-LA-rOg">
-                                        <rect key="frame" x="0.0" y="896" width="375" height="71"/>
+                                        <rect key="frame" x="0.0" y="939" width="375" height="71"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="N4b-LA-rOg" id="X8R-Yi-Hr6">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
@@ -335,7 +335,7 @@
                                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="71" id="srk-bH-0HO">
-                                        <rect key="frame" x="0.0" y="967" width="375" height="71"/>
+                                        <rect key="frame" x="0.0" y="1010" width="375" height="71"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="srk-bH-0HO" id="IE1-xN-nAE">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
@@ -354,7 +354,7 @@
                                                     <rect key="frame" x="341" y="27" width="18" height="18"/>
                                                 </imageView>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tQF-rw-2UA">
-                                                    <rect key="frame" x="198" y="26" width="129" height="20"/>
+                                                    <rect key="frame" x="198" y="25" width="129" height="20"/>
                                                     <color key="textColor" red="0.32156862749999998" green="0.3803921569" blue="0.41568627450000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -381,7 +381,7 @@
                             <tableViewSection headerTitle=" " id="BPb-Av-du1">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="71" id="2MT-sP-A6v">
-                                        <rect key="frame" x="0.0" y="1066" width="375" height="71"/>
+                                        <rect key="frame" x="0.0" y="1121" width="375" height="71"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="2MT-sP-A6v" id="Oqz-FM-pPd">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
@@ -427,7 +427,7 @@
                             <tableViewSection headerTitle=" " id="e4T-xD-jDU">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="71" id="QYN-aa-5Tp">
-                                        <rect key="frame" x="0.0" y="1165" width="375" height="71"/>
+                                        <rect key="frame" x="0.0" y="1232" width="375" height="71"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="QYN-aa-5Tp" id="bRk-LS-cez">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
@@ -464,7 +464,7 @@
                                         <inset key="separatorInset" minX="58" minY="0.0" maxX="0.0" maxY="0.0"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="71" id="Lar-HT-BYw">
-                                        <rect key="frame" x="0.0" y="1236" width="375" height="71"/>
+                                        <rect key="frame" x="0.0" y="1303" width="375" height="71"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="Lar-HT-BYw" id="myz-1l-Di8">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
@@ -498,7 +498,7 @@
                             <tableViewSection headerTitle=" " id="qsN-Sy-9BO">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="71" id="gB0-Nm-7Ao">
-                                        <rect key="frame" x="0.0" y="1335" width="375" height="71"/>
+                                        <rect key="frame" x="0.0" y="1414" width="375" height="71"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="gB0-Nm-7Ao" id="lpa-kZ-Qul">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
@@ -526,7 +526,7 @@
                                         <inset key="separatorInset" minX="58" minY="0.0" maxX="0.0" maxY="0.0"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="155" id="tB1-gQ-mBt">
-                                        <rect key="frame" x="0.0" y="1406" width="375" height="155"/>
+                                        <rect key="frame" x="0.0" y="1485" width="375" height="155"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="tB1-gQ-mBt" id="UqS-9s-f94">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="154"/>
